--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "menu";
 
 *{
     box-sizing: border-box;
@@ -61,6 +62,7 @@ main{
             }
         }
     }
+
     &#home {
         overflow: hidden;
         h1{
