--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -16,7 +16,7 @@
         @include easeOut;
     }
 
-    // Rotate into X with menu lines
+    //* Rotate into X with menu lines
     &.close {
         transform: rotate(180deg);
 
@@ -25,6 +25,7 @@
             // *line 1 rotate
             &:nth-child(1) {
                 transform: rotate(45deg) translate(5px, 5px);
+                background: red;
             }
 
             // *line 2 hide
@@ -35,7 +36,108 @@
             // * line 3 rotate
             &:nth-child(3) {
                 transform: rotate(-45deg) translate(7px, -6px);
+                background: red;
             }
         }
+    }
+}
+
+// * Menu Overlay
+
+.menu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden;
+
+    &.show {
+        visibility: visible;
+    }
+
+
+    &-branding,
+    &-nav {
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    &-nav {
+        margin: 0;
+        padding: 0;
+        background: darken($primary-color, 5);
+        list-style: none;
+        transform: translate3d(0, -100%, 0);
+        @include easeOut;
+
+        // * slide in from the top
+        &.show {
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
+    // *branding side
+    &-branding {
+        background: $primary-color;
+        @include easeOut;
+        transform: translate3d(0, 100%, 0);
+
+        // * slide in from the bottom
+        &.show {
+            transform: translate3d(0, 0, 0);
+        }
+        .portrait {
+            width: 250px;
+            height: 250px;
+            background: url("../img/cropFace.jpg");
+            border-radius: 50%;
+            border: solid 3px $secondary-color;
+            background-position: center;
+            background-size: cover;
+            
+        }
+    }
+    .nav-item {
+        transform: translate3d(600px, 0, 0);
+        @include easeOut;
+
+        &.show {
+            // *slide in from right
+            transform: translate3d(0, 0, 0);
+        }
+
+        // *change color for current page 
+        &.current > a {
+            color: $secondary-color;
+        }
+    }
+    .nav-link {
+        display: inline-block;
+        position: relative;
+        font-size: 30px;
+        text-transform: uppercase;
+        padding: 1rem 0;
+        font-weight: 300;
+        color: #fff;
+        text-decoration: none;
+        @include easeOut;
+
+        &:hover {
+            color: $secondary-color;
+        }
+    }
+}
+
+// *delay each nav-item slide by 0.1s
+
+@for $x from 1 through 4 {
+    .nav-item:nth-child(#{$x}){
+        transition-delay: $x * 0.1s;
     }
 }
