--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -12,7 +12,7 @@
         width: 35px;
         height: 2px;
         margin: 0 0 0.4rem 0;
-        background: #fff;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
 
@@ -124,7 +124,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: #fff;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
 
