--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,15 +1,17 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
-*{
+
+* {
     box-sizing: border-box;
 }
 
 body {
     @include background();
-    background:$primary-color;
-    color: #fff;
+    background: $primary-color;
+
+    // color given with go light or dark based on primary color
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -17,23 +19,25 @@ body {
 }
 
 // headings
-h1, 
-h2, 
+h1,
+h2,
 h3 {
     margin: 0;
     font-weight: 400;
-    &.lg-heading{
+
+    &.lg-heading {
         font-size: 6rem;
     }
-    &.sm-heading{
+
+    &.sm-heading {
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
         background: rgba(lighten($primary-color, 2), 0.5);
     }
 }
 
-a{
-    color:#fff;
+a {
+    color: #fff;
     text-decoration: none;
 }
 
@@ -43,32 +47,87 @@ header {
     width: 100%;
 }
 
-.text-secondary{
+.text-secondary {
     color: $secondary-color;
 }
 
-main{
+main {
     padding: 4rem;
-    height: 100%;
+    // height: 100%;
+    min-height: calc(100vh - 60px);
 
     .icons {
         margin-top: 1rem;
-        
+
         a {
             padding: 0.4rem;
 
             &:hover {
                 color: $secondary-color;
-                @include easeOut(); 
+                @include easeOut();
             }
         }
     }
 
     &#home {
         overflow: hidden;
-        h1{
-            margin-top:20vh;
+
+        h1 {
+            margin-top: 20vh;
         }
     }
 }
 
+
+.about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+        "bioimage bio bio"
+        "job1 job2 job3";
+    grid-template-columns: repeat(3, 1fr);
+
+
+    .bio-image {
+        grid-area: bioimage;
+        height: 200px;
+        width: 200px;
+        margin: auto;
+        border-radius: 50%;
+        border: $secondary-color 3px solid;
+    }
+
+    .bio {
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+
+    .job-1 {
+        grid-area: job1;
+    }
+
+    .job-2 {
+        grid-area: job2;
+    }
+
+    .job-3 {
+        grid-area: job3;
+    }
+
+    .job {
+        background: lighten($primary-color, 5);
+        padding: .5rem;
+        border-bottom: $secondary-color 5px solid;
+    }
+}
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    color: set-text-color($primary-color);
+    height: 60px;
+}
+
+
+@import "mobile";
