--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,14 @@
 // *Widescreens
 @include mediaXL {
-    
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 // *Desktops and Laptops
 @include mediaLg {
-
+    .projects {
+            grid-template-columns: repeat(3, 1fr);
+        }
 }
 // *Tablets and Small Laptops
 @include mediaMd {
@@ -56,6 +60,10 @@
         "job3";
         grid-template-columns:  1fr;
     }
+    
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 
@@ -64,4 +72,8 @@
     main#home h1 {
         margin-top: 10vh;
     }
+
+        .projects {
+            grid-template-columns: 1fr;
+        }
 }
